# hermes-next

./: .gitignore  LICENSE  README.md  RELEASE-v0.5.0.md  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.serena/: project.yml
docs/: hermes-next-native-memory-integration.md  hermes-next-v0.3.0-upgrade-guide.md  hot-context.md  strategic-positioning.md  v0.2.1-to-v0.3.0-upgrade-guide.md  v0.4-technical-design.md  v0.6.0-status-cli.md
hermes_next/: __init__.py  config.py  constants.py  migrate.py  promote.py  provider.py  status.py
hermes_next/cache/: __init__.py  concepts.py  connection.py  feedback.py  lifecycle.py  policies.py  schema.py  session_state.py  skills.py  traces.py  vector.py
hermes_next/integration/: __init__.py  native.py
hermes_next/memos/: __init__.py  capture.py  feedback.py  id.py  pipeline.py  policy.py  promote_gate.py  repair.py  retrieval.py  reward.py  skill.py  types.py  world_model.py
hermes_next/ov/: __init__.py  client.py  session.py
hermes_next/retrieval/: __init__.py  pipeline.py  ranker.py
hermes_next/viewer/: __init__.py  server.py
scripts/: migrate_memos.py
tests/: __init__.py  acceptance-suite.md  test_backfill_embeddings.py  test_capture.py  test_feedback.py  test_integration.py  test_native_integration.py  test_performance.py  test_pipeline.py  test_policy.py  test_provider.py  test_retrieval.py  test_retrieval_fallback.py  test_reward.py  test_skill.py  test_vector.py  test_viewer.py  test_world_model.py
